[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybenutils"
version = "8.0.0"
description = "PyBEN Utilities repository contains a variety of useful methods and classes designed to allow easy access to high-level operations"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Ben Moskovitch" },
  { name = "Ben Moskovitch", email = "darkflameben@gmail.com" }
]
maintainers = [
  { name = "Ben Moskovitch", email = "darkflameben@gmail.com" }
]
keywords = [
  "python",
  "proxmox",
  "gui",
  "utils",
  "utilities",
  "automation",
  "automation-tools"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/DarkFlameBEN/pybenutils.git"

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.pytest.ini_options]
pep8maxlinelength = 120
python_classes = ["*Suite"]
python_functions = ["test_*"]
testpaths = ["tests"]
