[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybenutils"
version = "7.1.0"
description = "PyBEN Utilities repository contains a variety of useful methods and classes designed to allow easy access to high-level operations"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Ben Moskovitch" },
  { name = "Ben Moskovitch", email = "darkflameben@gmail.com" }
]
maintainers = [
  { name = "Ben Moskovitch", email = "darkflameben@gmail.com" }
]
keywords = [
  "python",
  "proxmox",
  "gui",
  "utils",
  "utilities",
  "automation",
  "automation-tools"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  "requests",
  "supertools",
  "boto3",
  "psutil", # Note: Pin to 3.4.2 on Windows XP manually if needed
  "selenium",
  "multiprocess",
  "boto",
  "pysocks",
  "typing",
  "idna",
  "pyOpenSSL",
  "cryptography",
  "pyautogui",
  "proxmoxer",
  "looseversion",
  "scp",
  "Appium-Python-Client",

  # Platform-specific dependencies
  "pywin32; sys_platform == 'win32'",
  "pypiwin32; sys_platform == 'win32'",
  "pynput; sys_platform != 'linux'",
  "paramiko; platform_machine != 'ARM64'",
  "pywinauto; sys_platform == 'win32'"
]

[project.urls]
Homepage = "https://github.com/DarkFlameBEN/pybenutils.git"

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.pytest.ini_options]
pep8maxlinelength = 120
python_classes = ["*Suite"]
python_functions = ["test_*"]
testpaths = ["tests"]
